- Fixed list as blocks CSS to allow overflowing items.

--- a/RockWeb/Styles/rock-components/pagelist.less
+++ b/RockWeb/Styles/rock-components/pagelist.less
@@ -72,7 +72,6 @@
         height: 100%;
         min-height: 90px;
         padding: 8px;
-        overflow: hidden;
         color: @listasblocks-color;
         text-align: center;
         word-wrap: break-word;
